# GrassDemo

./: .gitignore  CMakeLists.txt  GLHead.h  README.md  imgui.ini  main.cpp
application/: Application.cpp  Application.h  AssimpInstanceLoader.cpp  AssimpInstanceLoader.h  AssimpLoader.cpp  AssimpLoader.h  CMakeLists.txt
application/camera/: camera.cpp  camera.h  cameraControl.cpp  cameraControl.h  gameCameraControl.cpp  gameCameraControl.h  orthographicCamera.cpp  orthographicCamera.h  persepectiveCamera.cpp  persepectiveCamera.h  trackballControl.cpp  trackballControl.h
assets/shaders/: colormat.frag  colorwithtexture.frag  colorwithtexture.vert  cube.frag  cube.vert  cubeenv.frag  depth.frag  fragment.glsl  phongpkg.frag  pointlight.frag  screen.frag  screen.vert  spotlight.frag  vertex.glsl  white.frag
glframework/: CMakeLists.txt  Geometry.cpp  Geometry.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  core.h
glframework/framebuffer/: FrameBuffer.cpp  FrameBuffer.h
glframework/light/: AmbientLight.cpp  AmbientLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
glframework/material/: ColorMaterial.cpp  ColorMaterial.h  ColorWithTexureMaterial.cpp  ColorWithTexureMaterial.h  CubeEnvMaterial.cpp  CubeEnvMaterial.h  CubeMaterial.cpp  CubeMaterial.h  DepthMaterial.cpp  DepthMaterial.h  GrassInstanceMaterial.cpp  GrassInstanceMaterial.h  Material.cpp  Material.h  OpacityMaterial.cpp  OpacityMaterial.h  PhongInstanceMaterial.cpp  PhongMaterial.cpp  (+6 more)
(+8 files in other folders)
